--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* To hide horizontal scroll bar */
+::-webkit-scrollbar {
+  display: none;
+}
